x_ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
  labels: 
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-nginx
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: testing.khlyuzder.com #testing.312redhat.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
